carousel content update

--- a/biofuels.html
+++ b/biofuels.html
@@ -142,9 +142,13 @@
                 <img src="./assets/images/biofuels/hero-img/biofuels-hero-img-1.webp" class="d-block w-100"
                     alt="Hero Image 1">
                 <div class="carousel-caption text-center">
-                    <h1>Lorem ipsum dolor sit amet consectetur. </h1>
-                    <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta obcaecati
-                        blanditiis, incidunt maiores rem ducimus unde. Dicta debitis corrupti accusamus.</p>
+                    <h1>Sustainable Biofuels for a Greener Future</h1>
+                    <p class="text-center">
+                        Power your business with eco-friendly energy solutions. Our biofuels are derived from renewable
+                        sources, providing a sustainable alternative to traditional fuels. With a focus on reducing
+                        carbon emissions and promoting cleaner energy, we offer high-quality biofuels that meet industry
+                        standards and contribute to a healthier planet.
+                    </p>
                 </div>
             </div>
             <div class="carousel-item carousel-item-custom-height">
@@ -183,12 +187,11 @@
     <div class="container pt-4">
         <div class="product-top-content text-center pb-3">
             <h2>PRODUCTS WE SERVE</h2>
-            <p class="text-center regular-font">At Bhagirath Industries, we take pride in serving a diverse range of essential raw
-                materials to meet
-                your global business needs. From premium-quality rice and soybeans to sugar, wheat, and nutritious dal
-                and pulses, our offerings are designed to fuel industries worldwide. Additionally, we excel in providing
-                high-quality yellow maize for various applications, ensuring a reliable supply chain for your raw
-                material requirements.
+            <p class="text-center regular-font">
+                Discover the future of sustainable energy at Bhagirath Industries with our Biofuel offering. We proudly
+                present a comprehensive range of environmentally-conscious biofuel options, including Bio Diesel,
+                Ethanol, Bio LNG, Fatty Acids & Sterne, and Palm Oil & Used Cooking Oil. These alternatives not only
+                reduce carbon emissions but also contribute to a greener planet.
             </p>
         </div>
         <div class="row">
@@ -324,7 +327,8 @@
                 <!-- frame 39 -->
                 <div class="col-md-3 mb-4 text-light pt-3 pt-md-5 pe-lg-5">
                     <h3>Contact Us</h3>
-                    <p class="pt-3">Address - Bhagirath Industries Private Limited - 309, Luxuria Business Hub, Near VR Mall, Udhana Magdalla Road, Surat - Dumas Road, Surat Gujarat - 395007</p>
+                    <p class="pt-3">Address - Bhagirath Industries Private Limited - 309, Luxuria Business Hub, Near VR
+                        Mall, Udhana Magdalla Road, Surat - Dumas Road, Surat Gujarat - 395007</p>
                 </div>
                 <!-- frame 38 -->
                 <div class="col-md-3 mb-4 text-light pt-3 pt-md-5">
