--- a/petroleum-and-oil-products.html
+++ b/petroleum-and-oil-products.html
@@ -135,10 +135,13 @@
       <div class="carousel-item carousel-item-custom-height active">
         <img src="assets/images/petroleum-oil-page/hero-img/Rectangle 29 (6).webp" class="d-block w-100" alt="...">
         <div class="carousel-caption text-center">
-          <h1>CHEMICALS AND CATTLE FIELD FERTILIZER</h1>
-          <p class="text-center">When it comes to petroleum and biofuel, we've got you covered. Our products are shipped
-            worldwide, and you
-            can trust that the quality is always up to standard.</p>
+          <h1>Reliable Petroleum & Oil Products for Your Industry</h1>
+          <p class="text-center">
+            Discover a comprehensive range of petroleum and oil products designed to fuel industries and drive success.
+            Our selection includes high-grade fuels, lubricants, and specialty oils tailored to meet the demands of
+            various sectors. With a commitment to quality and safety, we ensure dependable supply chains and competitive
+            pricing.
+          </p>
         </div>
       </div>
       <div class="carousel-item carousel-item-custom-height">
@@ -430,7 +433,8 @@
         <!-- frame 39 -->
         <div class="col-md-3 mb-4 text-light pt-3 pt-md-5 pe-lg-5">
           <h3>Contact Us</h3>
-          <p class="pt-3">Address - Bhagirath Industries Private Limited - 309, Luxuria Business Hub, Near VR Mall, Udhana Magdalla Road, Surat - Dumas Road, Surat Gujarat - 395007</p>
+          <p class="pt-3">Address - Bhagirath Industries Private Limited - 309, Luxuria Business Hub, Near VR Mall,
+            Udhana Magdalla Road, Surat - Dumas Road, Surat Gujarat - 395007</p>
         </div>
         <!-- frame 38 -->
         <div class="col-md-3 mb-4 text-light pt-3 pt-md-5">
