--- a/agro-commodities.html
+++ b/agro-commodities.html
@@ -134,9 +134,14 @@
                 <img src="./assets/images/agro-commodities/hero-img/agro-commodities-hero-img-1.webp"
                     class="d-block w-100" alt="Hero Image 1">
                 <div class="carousel-caption text-center">
-                    <h1>Lorem ipsum dolor sit amet consectetur. </h1>
-                    <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta obcaecati
-                        blanditiis, incidunt maiores rem ducimus unde. Dicta debitis corrupti accusamus.</p>
+                    <h1>Premium Agro Commodities for Your Business Needs</h1>
+                    <p class="text-center">
+                        Explore a diverse selection of high-quality agro commodities sourced from trusted suppliers.
+                        From grains and seeds to nuts and dried fruits, we offer a wide range of products to meet your
+                        business demands. Our commitment to quality ensures that you receive only the best products,
+                        perfect for wholesale and retail needs. Partner with us for reliability, consistency, and
+                        excellence in every batch.
+                    </p>
                 </div>
             </div>
             <div class="carousel-item carousel-item-custom-height">
@@ -175,7 +180,8 @@
     <div class="container pt-4">
         <div class="product-top-content text-center pb-3">
             <h2>PRODUCTS WE SERVE</h2>
-            <p class="text-center regular-font">At Bhagirath Industries, we take pride in serving a diverse range of essential raw
+            <p class="text-center regular-font">At Bhagirath Industries, we take pride in serving a diverse range of
+                essential raw
                 materials to meet
                 your global business needs. From premium-quality rice and soybeans to sugar, wheat, and nutritious dal
                 and pulses, our offerings are designed to fuel industries worldwide. Additionally, we excel in providing
@@ -340,7 +346,8 @@
                 <!-- frame 39 -->
                 <div class="col-md-3 mb-4 text-light pt-3 pt-md-5 pe-lg-5">
                     <h3>Contact Us</h3>
-                    <p class="pt-3">Address - Bhagirath Industries Private Limited - 309, Luxuria Business Hub, Near VR Mall, Udhana Magdalla Road, Surat - Dumas Road, Surat Gujarat - 395007</p>
+                    <p class="pt-3">Address - Bhagirath Industries Private Limited - 309, Luxuria Business Hub, Near VR
+                        Mall, Udhana Magdalla Road, Surat - Dumas Road, Surat Gujarat - 395007</p>
                 </div>
                 <!-- frame 38 -->
                 <div class="col-md-3 mb-4 text-light pt-3 pt-md-5">
