--- a/cattlefeed-and-fertilizers.html
+++ b/cattlefeed-and-fertilizers.html
@@ -143,9 +143,12 @@
                 <img src="./assets/images/cattlefeed-and-fertilizers/hero-img/cattlefeed-and-fertilizers-hero-img-1.webp"
                     class="d-block w-100" alt="Hero Image 1">
                 <div class="carousel-caption text-center">
-                    <h1>Lorem ipsum dolor sit amet consectetur. </h1>
-                    <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta obcaecati
-                        blanditiis, incidunt maiores rem ducimus unde. Dicta debitis corrupti accusamus.</p>
+                    <h1>Quality Cattle Feed & Fertilizers for Thriving Farms</h1>
+                    <p class="text-center">
+                        Enhance the growth and productivity of your farm with our premium cattle feed and fertilizers.
+                        Our carefully formulated products are designed to support animal health, improve crop yields,
+                        and enrich soil fertility.
+                    </p>
                 </div>
             </div>
             <div class="carousel-item carousel-item-custom-height">
@@ -476,7 +479,8 @@
                 <!-- frame 39 -->
                 <div class="col-md-3 mb-4 text-light pt-3 pt-md-5 pe-lg-5">
                     <h3>Contact Us</h3>
-                    <p class="pt-3">Address - Bhagirath Industries Private Limited - 309, Luxuria Business Hub, Near VR Mall, Udhana Magdalla Road, Surat - Dumas Road, Surat Gujarat - 395007</p>
+                    <p class="pt-3">Address - Bhagirath Industries Private Limited - 309, Luxuria Business Hub, Near VR
+                        Mall, Udhana Magdalla Road, Surat - Dumas Road, Surat Gujarat - 395007</p>
                 </div>
                 <!-- frame 38 -->
                 <div class="col-md-3 mb-4 text-light pt-3 pt-md-5">
