--- a/edible-and-non-edible-oils.html
+++ b/edible-and-non-edible-oils.html
@@ -135,9 +135,13 @@
         <img src="assets/images/edible-oil-page/hero-section-img/edible-oil-hero-img-1.webp" class="d-block w-100"
           alt="...">
         <div class="carousel-caption text-center">
-          <h1>CHEMICALS AND CATTLE FIELD FERTILIZER</h1>
-          <p>When it comes to petroleum and biofuel, we've got you covered. Our products are shipped worldwide, and you
-            can trust that the quality is always up to standard.</p>
+          <h1>Quality Edible & Non-Edible Oils for Every Industry</h1>
+          <p>
+            Discover our premium range of edible and non-edible oils, carefully sourced and processed to meet diverse
+            industry standards. Whether you're in the food sector or require industrial-grade oils, we provide products
+            that guarantee quality, purity, and consistency. From cooking oils to specialized oils for manufacturing, we
+            ensure that every drop meets your expectations.
+          </p>
         </div>
       </div>
       <div class="carousel-item carousel-item-custom-height">
@@ -174,7 +178,8 @@
   <div class="container pt-4">
     <div class="product-top-content text-center pb-3">
       <h2>PRODUCTS WE SERVE</h2>
-      <p class="text-center regular-font">At Bhagirath Industries, we take pride in serving a diverse range of essential raw materials to
+      <p class="text-center regular-font">At Bhagirath Industries, we take pride in serving a diverse range of essential
+        raw materials to
         meet your
         global business needs. From premium-quality rice and soybeans to sugar, wheat, and nutritious dal and pulses,
         our offerings are designed to fuel industries worldwide. Additionally, we excel in providing high-quality
@@ -326,7 +331,8 @@
         <!-- frame 39 -->
         <div class="col-md-3 mb-4 text-light pt-3 pt-md-5 pe-lg-5">
           <h3>Contact Us</h3>
-          <p class="pt-3">Address - Bhagirath Industries Private Limited - 309, Luxuria Business Hub, Near VR Mall, Udhana Magdalla Road, Surat - Dumas Road, Surat Gujarat - 395007</p>
+          <p class="pt-3">Address - Bhagirath Industries Private Limited - 309, Luxuria Business Hub, Near VR Mall,
+            Udhana Magdalla Road, Surat - Dumas Road, Surat Gujarat - 395007</p>
         </div>
         <!-- frame 38 -->
         <div class="col-md-3 mb-4 text-light pt-3 pt-md-5">
