--- a/minerals-and-ores.html
+++ b/minerals-and-ores.html
@@ -142,9 +142,12 @@
                 <img src="./assets/images/minerals-and-ores/hero-img/minerals-and-ores-hero-img-1.webp"
                     class="d-block w-100" alt="Hero Image 1">
                 <div class="carousel-caption text-center">
-                    <h1>Lorem ipsum dolor sit amet consectetur.</h1>
-                    <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta obcaecati
-                        blanditiis, incidunt maiores rem ducimus unde. Dicta debitis corrupti accusamus.</p>
+                    <h1>Unlocking the Power of Minerals & Ores</h1>
+                    <p class="text-center">
+                        Discover the essential building blocks of our modern world. From the raw materials that fuel
+                        industry to the precious resources that drive innovation, minerals and ores play a crucial role
+                        in shaping our lives.
+                    </p>
                 </div>
             </div>
             <div class="carousel-item carousel-item-custom-height">
@@ -386,7 +389,8 @@
                 <!-- frame 39 -->
                 <div class="col-md-3 mb-4 text-light pt-3 pt-md-5 pe-lg-5">
                     <h3>Contact Us</h3>
-                    <p class="pt-3">Address - Bhagirath Industries Private Limited - 309, Luxuria Business Hub, Near VR Mall, Udhana Magdalla Road, Surat - Dumas Road, Surat Gujarat - 395007</p>
+                    <p class="pt-3">Address - Bhagirath Industries Private Limited - 309, Luxuria Business Hub, Near VR
+                        Mall, Udhana Magdalla Road, Surat - Dumas Road, Surat Gujarat - 395007</p>
                 </div>
                 <!-- frame 38 -->
                 <div class="col-md-3 mb-4 text-light pt-3 pt-md-5">
