one new building material's page added

--- a/building-materials.html
+++ b/building-materials.html
@@ -4,19 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bhagirath Industries | Chemicals</title>
+    <title>Bhagirath Industries | Building Materials</title>
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="assets/css/home.css">
     <!-- <link rel="stylesheet" href="assets/css/contact-us.css"> -->
     <link rel="stylesheet" href="assets/css/products.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <!-- Font Awesome -->
+    <!-- FONT AWESOME -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-    <!-- Bootstrap -->
+    <!-- BOOTSTRAP -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
@@ -53,12 +53,13 @@
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" href="./edible-and-non-edible-oils.html">Edible & Non-Edible
                                 Oils</a></li>
-                        <li><a class="dropdown-item active" href="./chemicals.html">Chemicals</a></li>
+                        <!-- <li><a class="dropdown-item" href="./chemicals.html">Chemicals</a></li> -->
                         <li><a class="dropdown-item" href="./petroleum-and-oil-products.html">Petroleum & Oil
                                 Products</a></li>
                         <li><a class="dropdown-item" href="./agro-commodities.html">Agro Commodities</a></li>
                         <li><a class="dropdown-item" href="./biofuels.html">Biofuels</a></li>
-                        <li><a class="dropdown-item" href="./minerals-and-ores.html">Minerals & Ores</a></li>
+                        <li><a class="dropdown-item active" href="./minerals-and-ores.html">Minerals & Ores</a></li>
+                        <li><a class="dropdown-item" href="./building-materials.html">Building Materials</a></li>
                         <li><a class="dropdown-item" href="./cattlefeed-and-fertilizers.html">Cattlefeed &
                                 Fertilizers</a></li>
                     </ul>
@@ -110,12 +111,13 @@
                 <ul class="dropdown-menu">
                     <li><a class="dropdown-item" href="./edible-and-non-edible-oils.html">Edible & Non-Edible Oils</a>
                     </li>
-                    <li><a class="dropdown-item active" href="./chemicals.html">Chemicals</a></li>
+                    <!-- <li><a class="dropdown-item" href="./chemicals.html">Chemicals</a></li> -->
                     <li><a class="dropdown-item" href="./petroleum-and-oil-products.html">Petroleum & Oil Products</a>
                     </li>
                     <li><a class="dropdown-item" href="./agro-commodities.html">Agro Commodities</a></li>
                     <li><a class="dropdown-item" href="./biofuels.html">Biofuels</a></li>
-                    <li><a class="dropdown-item" href="./minerals-and-ores.html">Minerals & Ores</a></li>
+                    <li><a class="dropdown-item active" href="./minerals-and-ores.html">Minerals & Ores</a></li>
+                    <li><a class="dropdown-item" href="./building-materials.html">Building Materials</a></li>
                     <li><a class="dropdown-item" href="./cattlefeed-and-fertilizers.html">Cattlefeed & Fertilizers</a>
                     </li>
                 </ul>
@@ -139,35 +141,44 @@
     </div> -->
         <div class="carousel-inner">
             <div class="carousel-item carousel-item-custom-height active">
-                <img src="assets/images/edible-oil-page/hero-section-img/edible-oil-hero-img-1.webp"
-                    class="d-block w-100" alt="...">
+                <img src="./assets/images/building-materials/hero-img/building-material-hero-img-1.webp"
+                    class="d-block w-100" alt="Hero Image 1">
                 <div class="carousel-caption text-center">
-                    <h1>CHEMICALS AND CATTLE FIELD FERTILIZER</h1>
-                    <p>When it comes to petroleum and biofuel, we've got you covered. Our products are shipped
-                        worldwide, and you
-                        can trust that the quality is always up to standard.</p>
+                    <h1>Build Strong, Build Right with Premium Materials</h1>
+                    <p class="text-center">
+                        Discover a wide range of high-quality building materials crafted for durability and reliability.
+                        From foundations to finishes, we provide everything you need to bring your project to life,
+                        ensuring strength, safety, and sustainability at every step.
+                    </p>
                 </div>
             </div>
             <div class="carousel-item carousel-item-custom-height">
-                <img src="assets/images/edible-oil-page/hero-section-img/edible-oil-hero-img-2.webp"
-                    class="d-block w-100" alt="...">
+                <img src="./assets/images/building-materials/hero-img/building-material-hero-img-2.webp"
+                    class="d-block w-100" alt="Hero Image 2">
                 <div class="carousel-caption text-center">
-                    <h1>COMMODITIES AND FOOD PRODUCTS</h1>
-                    <p>When it comes to petroleum and biofuel, we've got you covered. Our products are shipped
-                        worldwide, and you
-                        can trust that the quality is always up to standard.</p>
+                    <h1>Lorem ipsum dolor sit amet consectetur.</h1>
+                    <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis,
+                        excepturi commodi? Rem accusantium vero quo deleniti? Harum quos beatae ut.</p>
                 </div>
             </div>
             <div class="carousel-item carousel-item-custom-height">
-                <img src="assets/images/edible-oil-page/hero-section-img/edible-oil-hero-img-3.webp"
-                    class="d-block w-100" alt="...">
+                <img src="./assets/images/building-materials/hero-img/building-material-hero-img-3.webp"
+                    class="d-block w-100" alt="Hero Image 3">
                 <div class="carousel-caption text-center">
-                    <h1>PETROLEUM AND BIO FUEL</h1>
-                    <p>Are you looking for top-quality agriculture commodities and food products? Look no further! We
-                        ship our
-                        products all over the world, and our quality meets all the necessary requirements.</p>
+                    <h1>Lorem ipsum dolor sit amet consectetur.</h1>
+                    <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis,
+                        excepturi commodi? Rem accusantium vero quo deleniti? Harum quos beatae ut.</p>
                 </div>
             </div>
+            <!-- <div class="carousel-item carousel-item-custom-height">
+        <img src="assets/images/petroleum-oil-page/hero-img/Rectangle 77.webp" class="d-block w-100" alt="...">
+        <div class="carousel-caption text-center">
+          <h1>PETROLEUM AND BIO FUEL</h1>
+          <p class="text-center">Are you looking for top-quality agriculture commodities and food products? Look no
+            further! We ship our
+            products all over the world, and our quality meets all the necessary requirements.</p>
+        </div>
+      </div> -->
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
             data-bs-slide="prev">
@@ -186,30 +197,142 @@
     <div class="container pt-4">
         <div class="product-top-content text-center pb-3">
             <h2>PRODUCTS WE SERVE</h2>
-            <p class="text-center regular-font">At Bhagirath Industries, we take pride in serving a diverse range of
-                essential raw
-                materials to meet
-                your
-                global business needs. From premium-quality rice and soybeans to sugar, wheat, and nutritious dal and
-                pulses,
-                our offerings are designed to fuel industries worldwide. Additionally, we excel in providing
-                high-quality
-                yellow maize for various applications, ensuring a reliable supply chain for your raw material
-                requirements.
+            <p class="text-center regular-font">
+                Discover top-quality polymers at Bhagirath Industry. As leading suppliers, we provide a wide range of
+                innovative polymer solutions. Our commitment to excellence ensures industries receive premium-grade
+                materials, promoting efficiency and sustainability. Partner with us for all your polymer needs, driving
+                progress through advanced chemical solutions.
             </p>
         </div>
         <div class="row">
             <!-- 1st Card -->
-
+            <div class="card-product col-md-6 p-4">
+                <div class="img-container-no-overflow">
+                    <img src="./assets/images/building-materials/card-img/STEEL.webp" class="card-img-top"
+                        alt="FERRO CROME">
+                </div>
+                <div class="card-body regular-font">
+                    <h3>STEEL</h3>
+                    <!-- <p>Chromium and iron alloy widely used in stainless steel production.</p> -->
+                    <ul>
+                        <li>Widely used in construction, automotive, and manufacturing industries.</li>
+                        <li>Offers high tensile strength and corrosion resistance.</li>
+                        <li>Available in various grades and types, such as stainless and carbon steel.</li>
+                        <li>Produced through processes like Basic Oxygen Furnace (BOF) and Electric Arc Furnace (EAF).
+                        </li>
+                        <li>Recyclable, making it a sustainable choice for modern industries.</li>
+                    </ul>
+                </div>
+            </div>
             <!-- 2nd Card -->
-
+            <div class="card-product col-md-6 p-4">
+                <div class="img-container-no-overflow">
+                    <img src="./assets/images/building-materials/card-img/CEMENT.webp" class="card-img-top"
+                        alt="IRON ORE">
+                </div>
+                <div class="card-body regular-font">
+                    <h3>CEMENT</h3>
+                    <!-- <p>Raw material in steelmaking, consisting of iron oxides extracted from mines.</p> -->
+                    <ul>
+                        <li>Essential ingredient in concrete and mortar production.</li>
+                        <li>Provides durability and strength to buildings and infrastructure.</li>
+                        <li>Available in various types, such as Portland, white, and blended cement.</li>
+                        <li>Produced through a process of crushing, heating, and grinding raw materials.</li>
+                        <li>Requires careful curing to achieve optimal hardness and longevity.</li>
+                    </ul>
+                </div>
+            </div>
             <!-- 3rd Card -->
-
+            <div class="card-product col-md-6 p-4">
+                <div class="img-container-no-overflow">
+                    <img src="./assets/images/building-materials/card-img/CLINKERS.webp" class="card-img-top"
+                        alt="COAL">
+                </div>
+                <div class="card-body regular-font">
+                    <h3>CLINKERS</h3>
+                    <!-- <p>Fossil fuel essential for electricity generation and industrial processes.</p> -->
+                    <ul>
+                        <li>High energy content.</li>
+                        <li>Essential for producing various types of cement.</li>
+                        <li>Composed mainly of calcium silicates and aluminates.</li>
+                        <li>Formed in rotary kilns at temperatures around 1,450°C.</li>
+                        <li>Ground with gypsum to create the final cement product.</li>
+                        <li>Provides the binding properties needed in concrete and mortar.</li>
+                    </ul>
+                </div>
+            </div>
             <!-- 4th Card -->
-
+            <div class="card-product col-md-6 p-4">
+                <div class="img-container-no-overflow">
+                    <img src="./assets/images/building-materials/card-img/WHITE CLINKERS.webp" class="card-img-top"
+                        alt="CROME CONCENTRATE">
+                </div>
+                <div class="card-body regular-font">
+                    <h3>WHITE CLINKERS</h3>
+                    <!-- <p>High-chromium material crucial for making alloys and chemicals.</p> -->
+                    <ul>
+                        <li>Made from raw materials with low iron content.</li>
+                        <li>Used in decorative and architectural concrete.</li>
+                        <li>Provides high brightness and consistent color.</li>
+                        <li>Requires precise temperature control during production.</li>
+                        <li>Essential for producing smooth, white surfaces in construction.</li>
+                    </ul>
+                </div>
+            </div>
             <!-- 5th Card -->
-
+            <div class="card-product col-md-6 p-4">
+                <div class="img-container-no-overflow">
+                    <img src="./assets/images/building-materials/card-img/SODIUM SULPHATE.webp" class="card-img-top"
+                        alt="BAUXITE">
+                </div>
+                <div class="card-body regular-font">
+                    <h3>SODIUM SULPHATE</h3>
+                    <p>Primary source of aluminium metal production, derived from aluminium oxide ores.</p>
+                    <ul>
+                        <li>Key ingredient in detergents and paper production.</li>
+                        <li>Sourced from natural deposits or as a by-product.</li>
+                        <li>Soluble, used in drying processes.</li>
+                        <li>Removes air bubbles in glass-making.</li>
+                        <li>Known as "Glauber's salt" in medicine 4°.</li>
+                    </ul>
+                </div>
+            </div>
             <!-- 6th Card -->
+            <div class="card-product col-md-6 p-4">
+                <div class="img-container-no-overflow">
+                    <img src="./assets/images/building-materials/card-img/CASTIC SODA.webp" class="card-img-top"
+                        alt="CALAMINE">
+                </div>
+                <div class="card-body regular-font">
+                    <h3>CASTIC SODA</h3>
+                    <!-- <p>Mineral primarily composed of zinc carbonate, utilised in pharmaceutical products.</p> -->
+                    <ul>
+                        <li>Key ingredient in soap and detergent production.</li>
+                        <li>Used in paper and pulp processing.</li>
+                        <li>Essential for water treatment and purification.</li>
+                        <li>Acts as a strong cleaning agent in various industries.</li>
+                        <li>Commonly applied in chemical manufacturing.</li>
+                    </ul>
+                </div>
+            </div>
+            <!-- 7th Card -->
+            <div class="card-product col-md-6 p-4">
+                <div class="img-container-no-overflow">
+                    <img src="./assets/images/building-materials/card-img/CASTIC POTASH.webp" class="card-img-top"
+                        alt="MANGANESE">
+                </div>
+                <div class="card-body regular-font">
+                    <h3>CASTIC POTASH</h3>
+                    <!-- <p>An element in steel production, improving its strength and durability.</p> -->
+                    <ul>
+                        <li>Key ingredient in soap and detergent production.</li>
+                        <li>Used in chemical manufacturing and pH control.</li>
+                        <li>Essential in biodiesel production.</li>
+                        <li>Strong alkaline cleaner in various industries.</li>
+                        <li>Commonly used in fertilizer formulations.</li>
+                    </ul>
+                </div>
+            </div>
 
         </div>
     </div>
@@ -253,10 +376,8 @@
                 <!-- frame 39 -->
                 <div class="col-md-3 mb-4 text-light pt-3 pt-md-5 pe-lg-5">
                     <h3>Contact Us</h3>
-                    <p class="pt-3">
-                        Address - Bhagirath Industries Private Limited - 309, Luxuria Business Hub, Near VR
-                        Mall, Udhana Magdalla Road, Surat - Dumas Road, Surat Gujarat - 395007
-                    </p>
+                    <p class="pt-3">Address - Bhagirath Industries Private Limited - 309, Luxuria Business Hub, Near VR
+                        Mall, Udhana Magdalla Road, Surat - Dumas Road, Surat Gujarat - 395007</p>
                 </div>
                 <!-- frame 38 -->
                 <div class="col-md-3 mb-4 text-light pt-3 pt-md-5">
