--- a/edible-and-non-edible-oils.html
+++ b/edible-and-non-edible-oils.html
@@ -30,8 +30,9 @@
 
 <body>
 
-  <!-- NEW NAVBAR -->
+  <!-- NEW NAVBAR STARTS-->
 
+<!-- Complete Navbar Code  Starts -->
   <nav class="new-navbar-container">
     <!-- Top part of navbar -->
     <div class="new-navbar-top">
@@ -60,6 +61,7 @@
             <li><a class="dropdown-item" href="./agro-commodities.html">Agro Commodities</a></li>
             <li><a class="dropdown-item" href="./biofuels.html">Biofuels</a></li>
             <li><a class="dropdown-item" href="./minerals-and-ores.html">Minerals & Ores</a></li>
+            <li><a class="dropdown-item" href="./building-materials.html">Building Materials</a></li>
             <li><a class="dropdown-item" href="./cattlefeed-and-fertilizers.html">Cattlefeed &
                 Fertilizers</a></li>
           </ul>
@@ -68,6 +70,7 @@
         <li><a href="./career.html">Career</a></li>
         <li><a href="./contact-us.html" class="new-navbar-contact-us-btn">Contact Us</a></li>
       </ul>
+      <!-- bottom part with social icons in navbar starts-->
       <div class="new-navbar-social-icons-2 pe-2">
         <a href="#" class="our-team-icon"><i class="bi bi-google"></i></a>
         <a href="#" class="our-team-icon"><i class="bi bi-instagram"></i></a>
@@ -95,7 +98,6 @@
       </div>
     </div>
   </nav>
-
   <!-- Dropdown -->
   <div class="new-navbar-dropdown">
     <ul class="new-navbar-dropdown-links">
@@ -117,6 +119,7 @@
           <li><a class="dropdown-item" href="./agro-commodities.html">Agro Commodities</a></li>
           <li><a class="dropdown-item" href="./biofuels.html">Biofuels</a></li>
           <li><a class="dropdown-item" href="./minerals-and-ores.html">Minerals & Ores</a></li>
+          <li><a class="dropdown-item" href="./building-materials.html">Building Materials</a></li>
           <li><a class="dropdown-item" href="./cattlefeed-and-fertilizers.html">Cattlefeed & Fertilizers</a>
           </li>
         </ul>
@@ -126,6 +129,8 @@
       <li><a href="./contact-us.html">Contact Us</a></li>
     </ul>
   </div>
+<!-- Complete Navbar Code  Ends -->
+
 
   <!-- CAROUSEL -->
 
