--- a/products.html
+++ b/products.html
@@ -56,6 +56,7 @@
             <li><a class="dropdown-item" href="./agro-commodities.html">Agro Commodities</a></li>
             <li><a class="dropdown-item" href="./biofuels.html">Biofuels</a></li>
             <li><a class="dropdown-item" href="./minerals-and-ores.html">Minerals & Ores</a></li>
+            <li><a class="dropdown-item" href="./building-materials.html">Building Materials</a></li>
             <li><a class="dropdown-item" href="./cattlefeed-and-fertilizers.html">Cattlefeed &
                 Fertilizers</a></li>
           </ul>
@@ -113,6 +114,7 @@
           <li><a class="dropdown-item" href="./agro-commodities.html">Agro Commodities</a></li>
           <li><a class="dropdown-item" href="./biofuels.html">Biofuels</a></li>
           <li><a class="dropdown-item" href="./minerals-and-ores.html">Minerals & Ores</a></li>
+          <li><a class="dropdown-item" href="./building-materials.html">Building Materials</a></li>
           <li><a class="dropdown-item" href="./cattlefeed-and-fertilizers.html">Cattlefeed & Fertilizers</a>
           </li>
         </ul>
