--- a/petroleum-and-oil-products.html
+++ b/petroleum-and-oil-products.html
@@ -61,6 +61,7 @@
             <li><a class="dropdown-item" href="./agro-commodities.html">Agro Commodities</a></li>
             <li><a class="dropdown-item" href="./biofuels.html">Biofuels</a></li>
             <li><a class="dropdown-item" href="./minerals-and-ores.html">Minerals & Ores</a></li>
+            <li><a class="dropdown-item" href="./building-materials.html">Building Materials</a></li>
             <li><a class="dropdown-item" href="./cattlefeed-and-fertilizers.html">Cattlefeed &
                 Fertilizers</a></li>
           </ul>
@@ -118,6 +119,7 @@
           <li><a class="dropdown-item" href="./agro-commodities.html">Agro Commodities</a></li>
           <li><a class="dropdown-item" href="./biofuels.html">Biofuels</a></li>
           <li><a class="dropdown-item" href="./minerals-and-ores.html">Minerals & Ores</a></li>
+          <li><a class="dropdown-item" href="./building-materials.html">Building Materials</a></li>
           <li><a class="dropdown-item" href="./cattlefeed-and-fertilizers.html">Cattlefeed & Fertilizers</a>
           </li>
         </ul>
