--- a/chemicals.html
+++ b/chemicals.html
@@ -59,6 +59,7 @@
                         <li><a class="dropdown-item" href="./agro-commodities.html">Agro Commodities</a></li>
                         <li><a class="dropdown-item" href="./biofuels.html">Biofuels</a></li>
                         <li><a class="dropdown-item" href="./minerals-and-ores.html">Minerals & Ores</a></li>
+                        <li><a class="dropdown-item active" href="./metals.html">Metals</a></li>
                         <li><a class="dropdown-item" href="./cattlefeed-and-fertilizers.html">Cattlefeed &
                                 Fertilizers</a></li>
                     </ul>
@@ -116,6 +117,7 @@
                     <li><a class="dropdown-item" href="./agro-commodities.html">Agro Commodities</a></li>
                     <li><a class="dropdown-item" href="./biofuels.html">Biofuels</a></li>
                     <li><a class="dropdown-item" href="./minerals-and-ores.html">Minerals & Ores</a></li>
+                    <li><a class="dropdown-item active" href="./metals.html">Metals</a></li>
                     <li><a class="dropdown-item" href="./cattlefeed-and-fertilizers.html">Cattlefeed & Fertilizers</a>
                     </li>
                 </ul>
