--- a/edible-and-non-edible-oils.html
+++ b/edible-and-non-edible-oils.html
@@ -32,7 +32,7 @@
 
   <!-- NEW NAVBAR STARTS-->
 
-<!-- Complete Navbar Code  Starts -->
+  <!-- Complete Navbar Code  Starts -->
   <nav class="new-navbar-container">
     <!-- Top part of navbar -->
     <div class="new-navbar-top">
@@ -61,6 +61,7 @@
             <li><a class="dropdown-item" href="./agro-commodities.html">Agro Commodities</a></li>
             <li><a class="dropdown-item" href="./biofuels.html">Biofuels</a></li>
             <li><a class="dropdown-item" href="./minerals-and-ores.html">Minerals & Ores</a></li>
+            <li><a class="dropdown-item active" href="./metals.html">Metals</a></li>
             <li><a class="dropdown-item" href="./building-materials.html">Building Materials</a></li>
             <li><a class="dropdown-item" href="./cattlefeed-and-fertilizers.html">Cattlefeed &
                 Fertilizers</a></li>
@@ -119,6 +120,7 @@
           <li><a class="dropdown-item" href="./agro-commodities.html">Agro Commodities</a></li>
           <li><a class="dropdown-item" href="./biofuels.html">Biofuels</a></li>
           <li><a class="dropdown-item" href="./minerals-and-ores.html">Minerals & Ores</a></li>
+          <li><a class="dropdown-item active" href="./metals.html">Metals</a></li>
           <li><a class="dropdown-item" href="./building-materials.html">Building Materials</a></li>
           <li><a class="dropdown-item" href="./cattlefeed-and-fertilizers.html">Cattlefeed & Fertilizers</a>
           </li>
@@ -129,7 +131,7 @@
       <li><a href="./contact-us.html">Contact Us</a></li>
     </ul>
   </div>
-<!-- Complete Navbar Code  Ends -->
+  <!-- Complete Navbar Code  Ends -->
 
 
   <!-- CAROUSEL -->
