--- a/metals.html
+++ b/metals.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bhagirath Industries | Agro Commodities</title>
+    <title>Bhagirath Industries | Metals</title>
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="assets/css/home.css">
     <!-- <link rel="stylesheet" href="assets/css/contact-us.css"> -->
@@ -56,9 +56,9 @@
                         <!-- <li><a class="dropdown-item" href="./chemicals.html">Chemicals</a></li> -->
                         <li><a class="dropdown-item" href="./petroleum-and-oil-products.html">Petroleum & Oil
                                 Products</a></li>
-                        <li><a class="dropdown-item active" href="./agro-commodities.html">Agro Commodities</a></li>
+                        <li><a class="dropdown-item" href="./agro-commodities.html">Agro Commodities</a></li>
                         <li><a class="dropdown-item" href="./biofuels.html">Biofuels</a></li>
-                        <li><a class="dropdown-item" href="./minerals-and-ores.html">Minerals & Ores</a></li>
+                        <li><a class="dropdown-item active" href="./minerals-and-ores.html">Minerals & Ores</a></li>
                         <li><a class="dropdown-item active" href="./metals.html">Metals</a></li>
                         <li><a class="dropdown-item" href="./building-materials.html">Building Materials</a></li>
                         <li><a class="dropdown-item" href="./cattlefeed-and-fertilizers.html">Cattlefeed &
@@ -115,17 +115,16 @@
                     <!-- <li><a class="dropdown-item" href="./chemicals.html">Chemicals</a></li> -->
                     <li><a class="dropdown-item" href="./petroleum-and-oil-products.html">Petroleum & Oil Products</a>
                     </li>
-                    <li><a class="dropdown-item active" href="./agro-commodities.html">Agro Commodities</a></li>
+                    <li><a class="dropdown-item" href="./agro-commodities.html">Agro Commodities</a></li>
                     <li><a class="dropdown-item" href="./biofuels.html">Biofuels</a></li>
-                    <li><a class="dropdown-item" href="./minerals-and-ores.html">Minerals & Ores</a></li>
+                    <li><a class="dropdown-item active" href="./minerals-and-ores.html">Minerals & Ores</a></li>
                     <li><a class="dropdown-item active" href="./metals.html">Metals</a></li>
                     <li><a class="dropdown-item" href="./building-materials.html">Building Materials</a></li>
                     <li><a class="dropdown-item" href="./cattlefeed-and-fertilizers.html">Cattlefeed & Fertilizers</a>
                     </li>
-                </ul>
+                </ul>     
             </li>
             <li><a href="./our-services.html">Our Services</a></li>
-            <li><a href="./career.html">Career</a></li>
             <li><a href="./contact-us.html">Contact Us</a></li>
         </ul>
     </div>
@@ -133,26 +132,42 @@
     <!-- CAROUSEL -->
 
     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel" data-bs-pause="false">
+        <!-- <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+        aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+        aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+        aria-label="Slide 3"></button>
+    </div> -->
         <div class="carousel-inner">
             <div class="carousel-item carousel-item-custom-height active">
-                <img src="./assets/images/agro-commodities/hero-img/agro-commodities-hero-img-1.webp"
-                    class="d-block w-100" alt="Hero Image 1">
+                <img src="./assets/images/metals/hero-img/metal-hero-img-1.webp" class="d-block w-100"
+                    alt="Hero Image 1">
                 <div class="carousel-caption text-center">
-                    <h1>Premium Agro Commodities for Your Business Needs</h1>
+                    <h1>Quality Metal Solutions for Every Industry</h1>
                     <p class="text-center">
-                        Explore a diverse selection of high-quality agro commodities sourced from trusted suppliers.
-                        From grains and seeds to nuts and dried fruits, we offer a wide range of products to meet your
-                        business demands. Our commitment to quality ensures that you receive only the best products,
-                        perfect for wholesale and retail needs. Partner with us for reliability, consistency, and
-                        excellence in every batch.
+                        At Metals, we specialise in providing high-grade metal products tailored to meet the needs of
+                        industries worldwide. From custom metal fabrication to durable materials, our expertise and
+                        commitment to excellence ensure that you receive quality, precision, and reliability in every
+                        order.
                     </p>
                 </div>
             </div>
             <div class="carousel-item carousel-item-custom-height">
-                <img src="./assets/images/agro-commodities/hero-img/agro-commodities-hero-img-2.webp"
-                    class="d-block w-100" alt="Hero Image 2">
+                <img src="./assets/images/metals/hero-img/metal-hero-img-2.webp" class="d-block w-100"
+                    alt="Hero Image 2">
                 <div class="carousel-caption text-center">
-                    <h1>Lorem ipsum dolor sit amet consectetur. </h1>
+                    <h1>Lorem ipsum dolor sit amet consectetur.</h1>
+                    <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis,
+                        excepturi commodi? Rem accusantium vero quo deleniti? Harum quos beatae ut.</p>
+                </div>
+            </div>
+            <div class="carousel-item carousel-item-custom-height">
+                <img src="./assets/images/metals/hero-img/metal-hero-img-3.webp" class="d-block w-100"
+                    alt="Hero Image 3">
+                <div class="carousel-caption text-center">
+                    <h1>Lorem ipsum dolor sit amet consectetur.</h1>
                     <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis,
                         excepturi commodi? Rem accusantium vero quo deleniti? Harum quos beatae ut.</p>
                 </div>
@@ -184,130 +199,117 @@
     <div class="container pt-4">
         <div class="product-top-content text-center pb-3">
             <h2>PRODUCTS WE SERVE</h2>
-            <p class="text-center regular-font">At Bhagirath Industries, we take pride in serving a diverse range of
-                essential raw
-                materials to meet
-                your global business needs. From premium-quality rice and soybeans to sugar, wheat, and nutritious dal
-                and pulses, our offerings are designed to fuel industries worldwide. Additionally, we excel in providing
-                high-quality yellow maize for various applications, ensuring a reliable supply chain for your raw
-                material requirements.
+            <p class="text-center regular-font">
+                Discover top-quality polymers at Bhagirath Industry. As leading suppliers, we provide a wide range of
+                innovative polymer solutions. Our commitment to excellence ensures industries receive premium-grade
+                materials, promoting efficiency and sustainability. Partner with us for all your polymer needs, driving
+                progress through advanced chemical solutions.
             </p>
         </div>
         <div class="row">
             <!-- 1st Card -->
             <div class="card-product col-md-6 p-4">
                 <div class="img-container-no-overflow">
-                    <img src="./assets/images/agro-commodities/card-img/agro-commodities-card-img-1.webp"
-                        class="card-img-top" alt="Rice">
+                    <img src="./assets/images/metals/card-img/ALUMINIUM.webp" class="card-img-top" alt="FERRO CROME">
                 </div>
                 <div class="card-body regular-font">
-                    <h3>RICE</h3>
-                    <p>A Versatile staple food or billions globally, cherished for its nutritional value and culinary
-                        diversity.</p>
+                    <h3>ALUMINIUM</h3>
+                    <p>Go-to choice for industries demanding durability and corrosion resistance.</p>
                     <ul>
-                        <li>Rice is a staple food for billions, providing vital carbohydrates.</li>
-                        <li>Varieties include long-grain, short-grain, and basmati, which offer distinct qualities.</li>
-                        <li>Leading rice producers: China, India, Indonesia.</li>
-                        <li>A versatile ingredient from sushi to risotto.</li>
-                        <li>Vital global food security and agriculture.</li>
+                        <li>Lightweight and corrosion-resistant.</li>
+                        <li>Highly recyclable and eco-friendly.</li>
+                        <li>Excellent conductivity for electrical applications.</li>
+                        <li>Versatile and used in various industries.</li>
+                        <li>Resistant to rust and ideal for outdoor use.</li>
                     </ul>
                 </div>
             </div>
             <!-- 2nd Card -->
             <div class="card-product col-md-6 p-4">
                 <div class="img-container-no-overflow">
-                    <img src="./assets/images/agro-commodities/card-img/agro-commodities-card-img-2.webp"
-                        class="card-img-top" alt="Soyabeans">
+                    <img src="./assets/images/metals/card-img/COPPER CATHODE.webp" class="card-img-top" alt="IRON ORE">
                 </div>
                 <div class="card-body regular-font">
-                    <h3>SOYABEANS</h3>
-                    <p>Versatile legumes rich in protein and nutrients, used in various industries, including food,
-                        animal feed, and oil production.</p>
+                    <h3>COPPER CATHODE</h3>
+                    <p>Copper cathode is the foundation of electrical systems and electronics.</p>
                     <ul>
-                        <li>Soybeans: major plant-based protein and oil source.</li>
-                        <li>Used in tofu, soy milk, and soybean oil.</li>
-                        <li>Essential for animal feed and biodiesel.</li>
-                        <li>Top producers: U.S., Brazil, Argentina.</li>
-                        <li>Gaining popularity for health benefits and sustainability.</li>
+                        <li>High purity for electrical conductivity.</li>
+                        <li>Widely used in electrical and electronic applications.</li>
+                        <li>Widely used in electrical and electronic applications.</li>
+                        <li>Essential for manufacturing copper products.</li>
+                        <li>Easy to process and shape for various purposes.</li>
                     </ul>
                 </div>
             </div>
             <!-- 3rd Card -->
             <div class="card-product col-md-6 p-4">
                 <div class="img-container-no-overflow">
-                    <img src="./assets/images/agro-commodities/card-img/agro-commodities-card-img-3.webp"
-                        class="card-img-top" alt="Wheat">
+                    <img src="./assets/images/metals/card-img/COPPER SCRAPE.webp" class="card-img-top" alt="COAL">
                 </div>
                 <div class="card-body regular-font">
-                    <h3>WHEAT</h3>
-                    <p>A widely cultivated grain, a primary source of flour for baking worldwide, adaptable to diverse
-                        climates.</p>
+                    <h3>COPPER SCRAPE</h3>
+                    <p>Recycling and manufacturing copper scrap contributes to sustainable practices.</p>
                     <ul>
-                        <li>WHEAT, a staple grain, makes bread, pasta, and cereals.</li>
-                        <li>Widely cultivated worldwide.</li>
-                        <li>Major producers : Russia, China, U.S.</li>
-                        <li>Varies in gluten, influencing usage.</li>
-                        <li>Crucial for global food security and diet diversity</li>
+                        <li>Valuable source of recycled copper.</li>
+                        <li>Reduces the need for mining new copper.</li>
+                        <li>Environmentally sustainable material.</li>
+                        <li>Used in making new copper products.</li>
+                        <li>Available in various forms for recycling processes.</li>
                     </ul>
                 </div>
             </div>
             <!-- 4th Card -->
             <div class="card-product col-md-6 p-4">
                 <div class="img-container-no-overflow">
-                    <img src="./assets/images/agro-commodities/card-img/agro-commodities-card-img-4.webp"
-                        class="card-img-top" alt="Sugar">
+                    <img src="./assets/images/metals/card-img/GOLD.webp" class="card-img-top" alt="CROME CONCENTRATE">
                 </div>
                 <div class="card-body regular-font">
-                    <h3>SUGAR</h3>
-                    <p>Derived from sugar cane or beets, sugar sweetens countless food and beverages, a key ingredient
-                        in food processing and confectionery.</p>
+                    <h3>GOLD</h3>
+                    <p>A symbol of luxury and value, a place in the world of jewelry, investment, and industry.</p>
                     <ul>
-                        <li>Sugar from sugarcane and sugar beets sweetens products.</li>
-                        <li>Key in confectionery and beverages.</li>
-                        <li>Top producers: Brazil, India, China</li>
-                        <li>Forms: granulated, brown, powdered.</li>
-                        <li>Concerns about excessive sugar drive interest in alternatives.</li>
+                        <li>Precious metal with enduring value.</li>
+                        <li>Highly malleable and ductile for crafting.</li>
+                        <li>Resistant to tarnish and corrosion.</li>
+                        <li>Widely used in jwellery and electronics.</li>
+                        <li>Serves as a reliable store of value.</li>
                     </ul>
                 </div>
             </div>
             <!-- 5th Card -->
             <div class="card-product col-md-6 p-4">
                 <div class="img-container-no-overflow">
-                    <img src="./assets/images/agro-commodities/card-img/agro-commodities-card-img-5.webp"
-                        class="card-img-top" alt="Dal and pulses">
+                    <img src="./assets/images/metals/card-img/IRON.webp" class="card-img-top" alt="BAUXITE">
                 </div>
                 <div class="card-body regular-font">
-                    <h3>DAL AND PULSES</h3>
-                    <p>Essential plant-based protein sources in many cuisines, including lentils, chickpeas, and beans.
-                    </p>
+                    <h3>IRON</h3>
+                    <p>Iron serves as the backbone of construction manufacturing industries.</p>
                     <ul>
-                        <li>Dal and pulses provide plant-based protein.</li>
-                        <li>Lentils, chickpeas, and beans offer diverse flavours and textures.</li>
-                        <li>Used in Indian, Mediterranean, and Middle Eastern cuisines.</li>
-                        <li>Vital for vegetarian and vegan diets.</li>
-                        <li>Enhance soil health through nitrogen fixation.</li>
+                        <li>Strong and durable material.</li>
+                        <li>Versatile for construction and manufacturing.</li>
+                        <li>Key component in steel production.</li>
+                        <li>Resistant to environmental factors.</li>
+                        <li>Foundation of many industrial applications.</li>
                     </ul>
                 </div>
             </div>
             <!-- 6th Card -->
             <div class="card-product col-md-6 p-4">
                 <div class="img-container-no-overflow">
-                    <img src="./assets/images/agro-commodities/card-img/agro-commodities-card-img-4.webp"
-                        class="card-img-top" alt="Yellow maize">
+                    <img src="./assets/images/metals/card-img/RAIL TRACK.webp" class="card-img-top" alt="CALAMINE">
                 </div>
                 <div class="card-body regular-font">
-                    <h3>YELLOW MAIZE</h3>
-                    <p>Derived from sugar cane or beets, sugar sweetens countless food and beverages, a key ingredient
-                        in food processing and confectionery.</p>
+                    <h3>RAIL TRACK</h3>
+                    <p>Rail tracks are essential for efficient and reliable railway systems.</p>
                     <ul>
-                        <li>Sugar from sugarcane and sugar beets sweetens products.</li>
-                        <li>Key in confectionery and beverages.</li>
-                        <li>Top producers: Brazil, India, China.</li>
-                        <li>Forms: granulated, brown, powdered.</li>
-                        <li>Concerns about excessive sugar drive interest in alternatives.</li>
+                        <li>Provides a stable and secure railway foundation.</li>
+                        <li>Ensures safe and efficient train transportation.</li>
+                        <li>Durable and long-lasting infrastructure.</li>
+                        <li>Vital for maintaining a well-functioning rail network.</li>
+                        <li>Available in various profiles for different rail systems.</li>
                     </ul>
                 </div>
             </div>
+
         </div>
     </div>
 
