--- a/products.html
+++ b/products.html
@@ -56,6 +56,7 @@
             <li><a class="dropdown-item" href="./agro-commodities.html">Agro Commodities</a></li>
             <li><a class="dropdown-item" href="./biofuels.html">Biofuels</a></li>
             <li><a class="dropdown-item" href="./minerals-and-ores.html">Minerals & Ores</a></li>
+            <li><a class="dropdown-item active" href="./metals.html">Metals</a></li>
             <li><a class="dropdown-item" href="./building-materials.html">Building Materials</a></li>
             <li><a class="dropdown-item" href="./cattlefeed-and-fertilizers.html">Cattlefeed &
                 Fertilizers</a></li>
@@ -114,6 +115,7 @@
           <li><a class="dropdown-item" href="./agro-commodities.html">Agro Commodities</a></li>
           <li><a class="dropdown-item" href="./biofuels.html">Biofuels</a></li>
           <li><a class="dropdown-item" href="./minerals-and-ores.html">Minerals & Ores</a></li>
+          <li><a class="dropdown-item active" href="./metals.html">Metals</a></li>
           <li><a class="dropdown-item" href="./building-materials.html">Building Materials</a></li>
           <li><a class="dropdown-item" href="./cattlefeed-and-fertilizers.html">Cattlefeed & Fertilizers</a>
           </li>
@@ -329,7 +331,8 @@
         <!-- frame 39 -->
         <div class="col-md-3 mb-4 text-light pt-3 pt-md-5 pe-lg-5">
           <h3>Contact Us</h3>
-          <p class="pt-3">Address - Bhagirath Industries Private Limited - 309, Luxuria Business Hub, Near VR Mall, Udhana Magdalla Road, Surat - Dumas Road, Surat Gujarat - 395007</p>
+          <p class="pt-3">Address - Bhagirath Industries Private Limited - 309, Luxuria Business Hub, Near VR Mall,
+            Udhana Magdalla Road, Surat - Dumas Road, Surat Gujarat - 395007</p>
         </div>
         <!-- frame 38 -->
         <div class="col-md-3 mb-4 text-light pt-3 pt-md-5">
