content added in chemical page

--- a/chemicals.html
+++ b/chemicals.html
@@ -143,33 +143,37 @@
     </div> -->
         <div class="carousel-inner">
             <div class="carousel-item carousel-item-custom-height active">
-                <img src="assets/images/edible-oil-page/hero-section-img/edible-oil-hero-img-1.webp"
-                    class="d-block w-100" alt="...">
+                <img src="assets/images/chemical-page/hero-img/chemical-hero-1.webp" class="d-block w-100" alt="...">
                 <div class="carousel-caption text-center">
-                    <h1>CHEMICALS AND CATTLE FIELD FERTILIZER</h1>
-                    <p>When it comes to petroleum and biofuel, we've got you covered. Our products are shipped
-                        worldwide, and you
-                        can trust that the quality is always up to standard.</p>
+                    <h1>Tailored Chemical Solutions for Your Unique Needs</h1>
+                    <p>
+                        Bhagirath Industry specializes in delivering custom chemical solutions, including polymers and
+                        solvents, tailored to your specific requirements. We work closely with your team to provide
+                        products that enhance productivity, sustainability, and performance in your industry.
+                    </p>
                 </div>
             </div>
             <div class="carousel-item carousel-item-custom-height">
-                <img src="assets/images/edible-oil-page/hero-section-img/edible-oil-hero-img-2.webp"
-                    class="d-block w-100" alt="...">
+                <img src="assets/images/chemical-page/hero-img/chemical-hero-2.webp" class="d-block w-100" alt="...">
                 <div class="carousel-caption text-center">
-                    <h1>COMMODITIES AND FOOD PRODUCTS</h1>
-                    <p>When it comes to petroleum and biofuel, we've got you covered. Our products are shipped
-                        worldwide, and you
-                        can trust that the quality is always up to standard.</p>
+                    <h1>Efficient and Reliable Solvents for Every Application</h1>
+                    <p>
+                        Our premium solvents are formulated to provide maximum efficiency in a wide range of industrial
+                        applications. From coatings and paints to cleaning and degreasing, Bhagirath Industry’s solvents
+                        offer superior quality and consistency to ensure optimal results in every use.
+                    </p>
                 </div>
             </div>
             <div class="carousel-item carousel-item-custom-height">
-                <img src="assets/images/edible-oil-page/hero-section-img/edible-oil-hero-img-3.webp"
-                    class="d-block w-100" alt="...">
+                <img src="assets/images/chemical-page/hero-img/chemical-hero-3.webp" class="d-block w-100" alt="...">
                 <div class="carousel-caption text-center">
-                    <h1>PETROLEUM AND BIO FUEL</h1>
-                    <p>Are you looking for top-quality agriculture commodities and food products? Look no further! We
-                        ship our
-                        products all over the world, and our quality meets all the necessary requirements.</p>
+                    <h1>Revolutionizing Industries with High-Performance Polymers</h1>
+                    <p>
+                        At Bhagirath Industry, we offer a wide range of high-quality polymers designed to meet the
+                        demands of various industries. Whether it's for manufacturing, packaging, or automotive, our
+                        polymers deliver durability, flexibility, and performance to enhance your products and
+                        processes.
+                    </p>
                 </div>
             </div>
         </div>
@@ -189,33 +193,72 @@
 
     <div class="container pt-4">
         <div class="product-top-content text-center pb-3">
-            <h2>PRODUCTS WE SERVE</h2>
-            <p class="text-center regular-font">At Bhagirath Industries, we take pride in serving a diverse range of
-                essential raw
-                materials to meet
-                your
-                global business needs. From premium-quality rice and soybeans to sugar, wheat, and nutritious dal and
-                pulses,
-                our offerings are designed to fuel industries worldwide. Additionally, we excel in providing
-                high-quality
-                yellow maize for various applications, ensuring a reliable supply chain for your raw material
-                requirements.
+            <h2>Polymers</h2>
+            <p class="text-center regular-font">
+                When it comes to sourcing reliable and consistently high-quality polymers, we are the go-to polymer
+                supplier for businesses across various industries. Whether you need polymers for packaging,
+                manufacturing, or any other purpose, you can trust us to provide the materials that meet your exact
+                specifications.
             </p>
         </div>
-        <div class="row">
-            <!-- 1st Card -->
+        <!-- <div class="row"> -->
+        <!-- 1st Card -->
+        <!-- <div class="col-md-4">
+                <div class="chemical_card regular-font">
+                    <h2>Ethylene Vinyl Acetate (EVA)</h2>
+                    <ul class="me-0 pe-0 " style="list-style-type: none; padding-left: 0rem;">
+                        <li class="ms-0 ps-0">CAS Number - 24937-78-8</li>
+                        <li class="ms-0 ps-0">Formula - (C2H4)n(C4H6O2)m</li>
+                        <li class="ms-0 ps-0">Other Names - Poly(ethylene-vinyl acetate)</li>
+                    </ul>
+                </div>
+            </div> -->
 
-            <!-- 2nd Card -->
+        <!-- 2st Card -->
+        <!-- <div class="col-md-4">
+                <div class="chemical_card regular-font">
+                    <h2>Ethylene Vinyl Acetate (EVA)</h2>
+                    <ul class="me-0 pe-0 " style="list-style-type: none; padding-left: 0rem;">
+                        <li class="ms-0 ps-0">CAS Number - 24937-78-8</li>
+                        <li class="ms-0 ps-0">Formula - (C2H4)n(C4H6O2)m</li>
+                        <li class="ms-0 ps-0">Other Names - Poly(ethylene-vinyl acetate)</li>
+                    </ul>
+                </div>
+            </div> -->
 
-            <!-- 3rd Card -->
+        <!-- 3st Card -->
+        <!-- <div class="col-md-4">
+                <div class="chemical_card regular-font">
+                    <h2>Ethylene Vinyl Acetate (EVA)</h2>
+                    <ul class="me-0 pe-0 " style="list-style-type: none; padding-left: 0rem;">
+                        <li class="ms-0 ps-0">CAS Number - 24937-78-8</li>
+                        <li class="ms-0 ps-0">Formula - (C2H4)n(C4H6O2)m</li>
+                        <li class="ms-0 ps-0">Other Names - Poly(ethylene-vinyl acetate)</li>
+                    </ul>
+                </div>
+            </div> -->
 
-            <!-- 4th Card -->
+        <!-- </div> -->
 
-            <!-- 5th Card -->
-
-            <!-- 6th Card -->
-
+        <!-- My Card Code Start -->
+        <div class="card-container" id="chemical-cards-container">
+            <!-- Chemical cards will be inserted here -->
         </div>
+        <!-- My Card Code End -->
+
+    </div>
+
+    <div class="container pt-4">
+        <div class="product-top-content text-center pb-3">
+            <h2>Solvents</h2>
+            <p class="text-center regular-font">
+                We specialise in providing solvents that are not only pure but also highly effective. When you choose
+                our solvents, you can rest assured that your production processes will run smoothly and efficiently. We
+                understand the importance of precision when it comes to solvents, and we deliver on that promise.
+            </p>
+        </div>
+
+        <!-- <div class="card-container" id="chemical-cards-container"></div> -->
     </div>
 
     <!-- FOOTER -->
@@ -395,6 +438,64 @@
         });
 
     </script>
+
+    <!-- This script code is written by me for chemical card Start -->
+    <script>
+        const chemicals = [
+            {
+                name: "Ethylene Vinyl Acetate (EVA)",
+                casNumber: "24937-78-8",
+                formula: "(C2H4)n(C4H6O2)m",
+                otherNames: "Poly(ethylene-vinyl acetate)"
+            },
+            {
+                name: "Polyethelyne Terephthalate (PET Resin)",
+                casNumber: "25038-59-9",
+                formula: "C10H8O4n",
+                otherNames: "Poly(ethyl-benzene-1,4-dicarboxylate)"
+            },
+            {
+                name: "Polyvinyl Chloride Resin (PVC Resin)",
+                casNumber: "9002-86-2",
+                formula: "(C2H3CL)n",
+                otherNames: "poly(1-chloroethylene)"
+            },
+        ];
+
+        // Function to create a card for each chemical
+        function createChemicalCard(chemical) {
+            const cardDiv = document.createElement('div');
+            cardDiv.classList.add('chemical_card', 'regular-font');
+
+            // Card content
+            cardDiv.innerHTML = `
+                                 <h2>${chemical.name}</h2>
+                                 <ul style="list-style-type: none; padding-left: 0;">
+                                   <li>CAS Number - ${chemical.casNumber}</li>
+                                   <li>Formula - ${chemical.formula}</li>
+                                   <li>Other Names - ${chemical.otherNames}</li>
+                                 </ul>
+                                `;
+
+            return cardDiv;
+        }
+
+        // Function to display all cards
+        function displayChemicalCards() {
+            const container = document.getElementById('chemical-cards-container');
+
+            // Loop through chemicals array and create cards
+            chemicals.forEach(chemical => {
+                const card = createChemicalCard(chemical);
+                container.appendChild(card); // Append each card to the container
+            });
+        }
+
+        // Call the function to display the cards
+        displayChemicalCards();
+
+    </script>
+    <!-- This script code is written by me for chemical card End -->
 
 </body>
 
