--- a/edible-and-non-edible-oils.html
+++ b/edible-and-non-edible-oils.html
@@ -55,7 +55,7 @@
           <ul class="dropdown-menu">
             <li><a class="dropdown-item active" href="./edible-and-non-edible-oils.html">Edible & Non-Edible
                 Oils</a></li>
-            <!-- <li><a class="dropdown-item" href="./chemicals.html">Chemicals</a></li> -->
+            <li><a class="dropdown-item" href="./chemicals.html">Chemicals</a></li>
             <li><a class="dropdown-item" href="./petroleum-and-oil-products.html">Petroleum & Oil
                 Products</a></li>
             <li><a class="dropdown-item" href="./agro-commodities.html">Agro Commodities</a></li>
@@ -114,7 +114,7 @@
         <ul class="dropdown-menu">
           <li><a class="dropdown-item active" href="./edible-and-non-edible-oils.html">Edible & Non-Edible Oils</a>
           </li>
-          <!-- <li><a class="dropdown-item" href="./chemicals.html">Chemicals</a></li> -->
+          <li><a class="dropdown-item" href="./chemicals.html">Chemicals</a></li>
           <li><a class="dropdown-item" href="./petroleum-and-oil-products.html">Petroleum & Oil Products</a>
           </li>
           <li><a class="dropdown-item" href="./agro-commodities.html">Agro Commodities</a></li>
