--- a/about.html
+++ b/about.html
@@ -116,7 +116,7 @@
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" href="./edible-and-non-edible-oils.html">Edible & Non-Edible
                                 Oils</a></li>
-                        <!-- <li><a class="dropdown-item" href="./chemicals.html">Chemicals</a></li> -->
+                        <li><a class="dropdown-item" href="./chemicals.html">Chemicals</a></li>
                         <li><a class="dropdown-item" href="./petroleum-and-oil-products.html">Petroleum & Oil
                                 Products</a></li>
                         <li><a class="dropdown-item" href="./agro-commodities.html">Agro Commodities</a></li>
@@ -175,7 +175,7 @@
                 <ul class="dropdown-menu">
                     <li><a class="dropdown-item" href="./edible-and-non-edible-oils.html">Edible & Non-Edible Oils</a>
                     </li>
-                    <!-- <li><a class="dropdown-item" href="./chemicals.html">Chemicals</a></li> -->
+                    <li><a class="dropdown-item" href="./chemicals.html">Chemicals</a></li>
                     <li><a class="dropdown-item" href="./petroleum-and-oil-products.html">Petroleum & Oil Products</a>
                     </li>
                     <li><a class="dropdown-item" href="./agro-commodities.html">Agro Commodities</a></li>
